force-app/main/default/objects/Car__c/fields/Available_For_rent__c.field-meta.xml
<CustomField>
    <fullName>Available_For_rent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available For rent</label>
    <type>Checkbox</type>
</CustomField>