force-app/main/default/objects/Car__c/fields/CarType__c.field-meta.xml
<CustomField>
    <fullName>CarType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CarType</label>
    <referenceTo>CarType__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>