force-app/main/default/objects/Car__c/fields/Engine_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Number__c</fullName>
    <label>Engine Number</label>
    <length>100</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>