force-app/main/default/objects/Car__c/fields/Milage__c.field-meta.xml
<CustomField>
    <fullName>Milage__c</fullName>
    <label>Milage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>